--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev" : "nodemon src/app.js -e js,hbs"
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +14,9 @@
     "express": "^4.17.1",
     "hbs": "^4.2.0",
     "postman-request": "^2.88.1-postman.30"
+    
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
